# sp500_historical_components

./: add_req.py  components.py  pyproject.toml
DowJones/: DowJones_2015-01-01.csv  DowJones_2015-12-31.csv  DowJones_2018-04-01.csv  DowJones_2019-04-01.csv  DowJones_2019-07-01.csv  DowJones_2019-10-01.csv  DowJones_2020-07-01.csv  DowJones_2021-01-01.csv  DowJones_2024-10-01.csv  DowJones_2024-12-31.csv
NASDAQ/: NASDAQ_2024-12-31.csv
Russell_1000/: Russell_1000_2024-10-01.csv  Russell_1000_2024-12-31.csv
S400/: S400_2019-01-01.csv  S400_2019-04-01.csv  S400_2019-07-01.csv  S400_2019-10-01.csv  S400_2019-12-31.csv  S400_2020-04-01.csv  S400_2020-10-01.csv  S400_2021-01-01.csv  S400_2021-04-01.csv  S400_2021-07-01.csv  S400_2021-10-01.csv  S400_2021-12-31.csv  S400_2022-01-01.csv  S400_2022-04-01.csv  S400_2022-07-01.csv  S400_2022-10-01.csv  S400_2022-12-31.csv  S400_2023-01-01.csv  S400_2023-04-01.csv  S400_2023-07-01.csv  S400_2023-10-01.csv  S400_2024-01-01.csv  S400_2024-04-01.csv  S400_2024-07-01.csv  S400_2024-10-01.csv  S400_2024-12-31.csv
S600/: S600_2025-02-16.csv
SPX/: SPX_2015-01-01.csv  SPX_2015-04-01.csv  SPX_2015-07-01.csv  SPX_2015-10-01.csv  SPX_2016-01-01.csv  SPX_2016-04-01.csv  SPX_2016-07-01.csv  SPX_2016-10-01.csv  SPX_2016-12-31.csv  SPX_2017-04-01.csv  SPX_2017-07-01.csv  SPX_2017-10-01.csv  SPX_2018-01-01.csv  SPX_2018-04-01.csv  SPX_2018-07-01.csv  SPX_2018-10-01.csv  SPX_2018-12-31.csv  SPX_2019-04-01.csv  SPX_2019-07-01.csv  SPX_2019-10-01.csv  SPX_2019-12-31.csv  SPX_2020-01-01.csv  SPX_2020-04-01.csv  SPX_2020-07-01.csv  (+19 more)
