[project]
name = "sp500-historical-components"
version = "0.1.0"
description = ""
authors = [
    {name = "Greg",email = "greg@greg.greg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph (==0.17.2)",
    "beautifulsoup4 (==4.12.3)",
    "blinker (==1.8.2)",
    "certifi (==2024.6.2)",
    "charset-normalizer (==3.3.2)",
    "click (==8.1.7)",
    "flask (==3.0.3)",
    "flask-sqlalchemy (==3.1.1)",
    "future (==0.18.2)",
    "greenlet (==3.0.3)",
    "html5lib (==1.1)",
    "idna (==3.7)",
    "importlib-metadata (==8.0.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.4)",
    "lxml (==5.3.0)",
    "macholib (==1.15.2)",
    "markupsafe (==2.1.5)",
    "numpy (>=2.2.2)",
    "pandas (==2.2.3)",
    "pyjwt (==2.8.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2024.1)",
    "requests (==2.32.3)",
    "soupsieve (==2.5)",
    "sqlalchemy (==2.0.31)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.1)",
    "urllib3 (==2.2.2)",
    "webencodings (==0.5.1)",
    "werkzeug (==3.0.3)",
    "zipp (==3.19.2)",
    "six (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
